# fish_shoal

./: CMakeLists.txt  README.md  main.cpp
classes/: BigFish.cpp  Fish.cpp  LittleFish.cpp  Ocean.cpp  VariableFish.cpp
headers/: BigFish.h  Fish.h  LittleFish.h  Ocean.h  VariableFish.h  config.hpp
